IF (WIN32)
    SET (BOOST_INCLUDEDIR ${Boost_INCLUDE_DIRS})
    SET (BOOST_LIBDIR ${Boost_LIBRARY_DIRS})
    SET (OGRE_INCLUDEDIR $ENV{OGRE_HOME}/include)
    SET (OGRE_DEPENDINCLUDEDIR $ENV{OGRE_HOME}/Samples/include)
    SET (CEGUI_INCLUDEDIR $ENV{OGRE_HOME}/include/cegui)
    SET (OGRE_LIBDIR $ENV{OGRE_HOME}/bin/debug)
    SET (OGRE_LIBS OgreMain_d)
    SET (OGRE_DEPENDLIBDIR $ENV{OGRE_HOME}/lib)
    SET (OIS_INCLUDEDIR $ENV{OGRE_HOME}/../dependencies/include)
    SET (OIS_LIBDIR $ENV{OIS_HOME}/../dependencies/lib/debug)
    SET (OIS_LIB ois_d)
    SET (MyGUI_INCLUDEDIR $ENV{MyGUI_HOME}/include)
    SET (MyGUI_LIBDIR $ENV{MyGUI_HOME}/lib/debug)
    SET (MyGUI_LIBS MyGUIEngine_d)
    SET (ENET_INCLUDEDIR $ENV{ENET_HOME}/include)
    SET (ENET_LIBDIR $ENV{ENET_HOME})
    SET (ENET_LIBS enet winmm ws2_32)
    INCLUDE_DIRECTORIES(${UBC_INCLUDE_DIR}  ${UBC_SRC_DIR}/tinyxml ${ENET_INCLUDEDIR}  ${BOOST_INCLUDEDIR} ${OGRE_INCLUDE_DIRS} ${OIS_INCLUDE_DIRS} ${MyGUI_INCLUDEDIR} ${OgreAL_INCLUDEDIR} ${OpenAL_INCLUDEDIR})
    LINK_DIRECTORIES(${UBC_SRC_DIR}/tinyxml ${ENET_LIBDIR} ${BOOST_LIBDIR} ${OGRE_LIBRARY_DIRS} ${OGRE_DEPENDLIBDIR} ${OIS_LIBRARY_DIRS} ${MyGUI_LIBDIR} ${OgreAL_LIBDIR})
    
    ADD_EXECUTABLE(ubc WIN32 ${UBC_SRCS})
    TARGET_LINK_LIBRARIES(ubc tinyxml ${Boost_LIBRARIES} ${OGRE_LIBS} ${OIS_LIB} ${MyGUI_LIBS} ${ENET_LIBS})
    ADD_EXECUTABLE(client ${CLIENT_SRCS} )
    TARGET_LINK_LIBRARIES( client tinyxml ${Boost_LIBRARIES} ${ENET_LIBS} ${OGRE_LIBS} ${OIS_LIBS} )
    ADD_EXECUTABLE(server ${SERVER_SRCS} )
    TARGET_LINK_LIBRARIES( server tinyxml ${Boost_LIBRARIES} ${ENET_LIBS} ${OGRE_LIBS} ${OIS_LIBS} )
ELSEIF (APPLE)
    INCLUDE_DIRECTORIES (../include ../src/tinyxml ../Dependencies/include)
    LINK_DIRECTORIES(../src/tinyxml ../Dependencies/lib/Debug)
    FIND_LIBRARY(OGRE_LIB Ogre)
    MARK_AS_ADVANCED(OGRE_LIB)
    FIND_LIBRARY(CG_LIB Cg)
    MARK_AS_ADVANCED(CG_LIB)
    FIND_LIBRARY(CARBON_LIB Carbon)
    MARK_AS_ADVANCED(CARBON_LIB)
    ADD_EXECUTABLE (ubc ${UBC_SRCS})
    TARGET_LINK_LIBRARIES( ubc tinyxml ${OGRE_LIB} ${CG_LIB} ${CARBON_LIB}  ois)
ELSE (APPLE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
        COMMAND ${CMAKE_COMMAND} -E  echo ${OGRE_PLUGINDIR} >>  ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
    )

    INCLUDE_DIRECTORIES(../include ../src/tinyxml ${OGRE_INCLUDEDIR} ${OIS_INCLUDEDIR} ${MyGUI_INCLUDEDIR} ${OGREBULLET_INCLUDEDIR} ${BULLET_INCLUDEDIR} ${OGREAL_INCLUDEDIR})
    LINK_DIRECTORIES(../src/tinyxml ${OGRE_LIBDIR} ${OIS_LIBDIR} ${MyGUI_LIBDIR} ${OGREAL_LIBDIR})
    ADD_EXECUTABLE(ubc ${UBC_SRCS} )
    TARGET_LINK_LIBRARIES( ubc tinyxml ${ENET_LIBS} ${MyGUI_LIBS} ${OGRE_LIBS} ${OIS_LIBS} )
    ADD_EXECUTABLE(client ${CLIENT_SRCS} )
    TARGET_LINK_LIBRARIES( client tinyxml ${ENET_LIBS} ${MyGUI_LIBS} ${OGRE_LIBS} ${OIS_LIBS} )
    ADD_EXECUTABLE(server ${SERVER_SRCS} )
    TARGET_LINK_LIBRARIES( server tinyxml ${ENET_LIBS} ${MyGUI_LIBS} ${OGRE_LIBS} ${OIS_LIBS} )
ENDIF (WIN32)
