IF (WIN32)
    SET (OgreAL_INCLUDEDIR $ENV{OGREAL_HOME}/include)
    SET (OgreAL_LIBDIR $ENV{OGREAL_HOME}/lib/release)
    SET (OgreAL_LIBS OgreAL)
    SET (OpenAL_INCLUDEDIR $ENV{OPENAL_SDK}/include)
#    SET (ENET_INCLUDEDIR $ENV{ENET_HOME}/include)
#    SET (ENET_LIBDIR $ENV{ENET_HOME})
#    SET (ENET_LIBS enet winmm ws2_32)
    INCLUDE_DIRECTORIES(${UBC_INCLUDE_DIR} ${UBC_DEPENDENCIES_DIR}/tinyxml  ${ENet_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${OGRE_INCLUDE_DIRS} ${OIS_INCLUDE_DIRS} ${MYGUI_INCLUDE_DIRS} ${OgreAL_INCLUDEDIR} ${OpenAL_INCLUDEDIR})
    LINK_DIRECTORIES(${UBC_DEPENDENCIES_DIR}/tinyxml ${ENET_LIBDIR} ${Boost_LIBRARY_DIRS} ${OGRE_LIBRARY_DIRS} ${OGRE_DEPENDLIBDIR} ${OIS_LIBRARY_DIRS} ${MYGUI_LIB_DIR} ${OgreAL_LIBDIR})

    ADD_EXECUTABLE(ubc WIN32 ${UBC_SRCS} ${UBC_HEADERS})
    TARGET_LINK_LIBRARIES(ubc tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${MYGUI_LIBRARIES})
    ADD_EXECUTABLE(client ${CLIENT_SRCS})
    TARGET_LINK_LIBRARIES( client tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})
    ADD_EXECUTABLE(server ${SERVER_SRCS})
    TARGET_LINK_LIBRARIES( server tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})

ELSEIF (APPLE)
    INCLUDE_DIRECTORIES (../include ../src/tinyxml ../Dependencies/include)
    LINK_DIRECTORIES(../src/tinyxml ../Dependencies/lib/Debug)
    FIND_LIBRARY(OGRE_LIB Ogre)
    MARK_AS_ADVANCED(OGRE_LIB)
    FIND_LIBRARY(CG_LIB Cg)
    MARK_AS_ADVANCED(CG_LIB)
    FIND_LIBRARY(CARBON_LIB Carbon)
    MARK_AS_ADVANCED(CARBON_LIB)
    ADD_EXECUTABLE (ubc ${UBC_SRCS})
    TARGET_LINK_LIBRARIES( ubc tinyxml ${OGRE_LIB} ${CG_LIB} ${CARBON_LIB}  ois)
ELSE (APPLE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
        COMMAND ${CMAKE_COMMAND} -E  echo ${OGRE_PLUGINDIR} >>  ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
    )

    INCLUDE_DIRECTORIES(../include ${UBC_DEPENDENCIES_DIR}/tinyxml ${OGRE_INCLUDE_DIRS} ${OIS_INCLUDE_DIRS} ${MyGUI_INCLUDEDIR} ${OGREBULLET_INCLUDEDIR} ${BULLET_INCLUDEDIR} ${OGREAL_INCLUDEDIR})
    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../src/tinyxml ${OGRE_LIBDIR} ${OIS_LIBDIR} ${MyGUI_LIBDIR} ${OGREBULLET_LIBDIR} ${BULLET_LIBDIR} ${OGREAL_LIBDIR})
    ADD_EXECUTABLE(ubc ${UBC_SRCS} ${UBC_HEADERS})
    TARGET_LINK_LIBRARIES( ubc tinyxml enet ${Boost_LIBRARIES} ${MyGUI_LIBS} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})
    ADD_EXECUTABLE(client ${CLIENT_SRCS} )
    TARGET_LINK_LIBRARIES( client tinyxml enet ${Boost_LIBRARIES} ${MyGUI_LIBS} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} )
    ADD_EXECUTABLE(server ${SERVER_SRCS} )
    TARGET_LINK_LIBRARIES( server tinyxml enet ${Boost_LIBRARIES} ${MyGUI_LIBS} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} )
ENDIF (WIN32)
