#INCLUDE_DIRECTORIES(${UBC_INCLUDE_DIR} ${UBC_DEPENDENCIES_DIR}/tinyxml  ${ENet_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${OGRE_INCLUDE_DIRS} ${OIS_INCLUDE_DIRS} ${MYGUI_INCLUDE_DIRS} ${OgreAL_INCLUDEDIR} ${OpenAL_INCLUDEDIR})

#LINK_DIRECTORIES(${UBC_DEPENDENCIES_DIR}/tinyxml ${ENET_LIBDIR} ${Boost_LIBRARY_DIRS} ${OGRE_LIBRARY_DIRS} ${OGRE_DEPENDLIBDIR} ${OIS_LIBRARY_DIRS} ${MYGUI_LIB_DIR} ${OgreAL_LIBDIR})

IF (WIN32)
#    SET (OpenAL_INCLUDEDIR $ENV{OPENAL_SDK}/include)
#    SET (ENET_INCLUDEDIR $ENV{ENET_HOME}/include)
#    SET (ENET_LIBDIR $ENV{ENET_HOME})
#    SET (ENET_LIBS enet winmm ws2_32)

    ADD_EXECUTABLE(ubc WIN32 ${UBC_SRCS} ${UBC_HEADERS})
    ADD_EXECUTABLE(client ${CLIENT_SRCS})
    ADD_EXECUTABLE(server ${SERVER_SRCS})

ELSEIF (APPLE)
    INCLUDE_DIRECTORIES (../include ../src/tinyxml ../Dependencies/include)
    LINK_DIRECTORIES(../src/tinyxml ../Dependencies/lib/Debug)
    FIND_LIBRARY(OGRE_LIB Ogre)
    MARK_AS_ADVANCED(OGRE_LIB)
    FIND_LIBRARY(CG_LIB Cg)
    MARK_AS_ADVANCED(CG_LIB)
    FIND_LIBRARY(CARBON_LIB Carbon)
    MARK_AS_ADVANCED(CARBON_LIB)
    ADD_EXECUTABLE (ubc ${UBC_SRCS})
    TARGET_LINK_LIBRARIES( ubc tinyxml ${OGRE_LIB} ${CG_LIB} ${CARBON_LIB}  ois)
ELSE (APPLE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
        COMMAND ${CMAKE_COMMAND} -E  echo ${OGRE_PLUGINDIR} >>  ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
    )

    ADD_EXECUTABLE(ubc ${UBC_SRCS} ${UBC_HEADERS})
    ADD_EXECUTABLE(client ${CLIENT_SRCS} )
    ADD_EXECUTABLE(server ${SERVER_SRCS} )

ENDIF (WIN32)
    TARGET_LINK_LIBRARIES(ubc tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${MYGUI_LIBRARIES})
    TARGET_LINK_LIBRARIES( client tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})
    TARGET_LINK_LIBRARIES( server tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})

