IF (WIN32)
    ADD_EXECUTABLE(ubc WIN32 ${UBC_SRCS} ${UBC_HEADERS})
    ADD_EXECUTABLE(client ${CLIENT_SRCS})
    ADD_EXECUTABLE(server ${SERVER_SRCS})

ELSEIF (APPLE)
    INCLUDE_DIRECTORIES (../include ../src/tinyxml ../Dependencies/include)
    LINK_DIRECTORIES(../src/tinyxml ../Dependencies/lib/Debug)
    FIND_LIBRARY(OGRE_LIB Ogre)
    MARK_AS_ADVANCED(OGRE_LIB)
    FIND_LIBRARY(CG_LIB Cg)
    MARK_AS_ADVANCED(CG_LIB)
    FIND_LIBRARY(CARBON_LIB Carbon)
    MARK_AS_ADVANCED(CARBON_LIB)
    ADD_EXECUTABLE (ubc ${UBC_SRCS})
    TARGET_LINK_LIBRARIES( ubc tinyxml ${OGRE_LIB} ${CG_LIB} ${CARBON_LIB}  ois)
ELSE (APPLE)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
        COMMAND ${CMAKE_COMMAND} -E  echo ${OGRE_PLUGINDIR} >>  ${CMAKE_CURRENT_SOURCE_DIR}/../src/config.h
    )

    ADD_EXECUTABLE(ubc ${UBC_SRCS} ${UBC_HEADERS})
    ADD_EXECUTABLE(client ${CLIENT_SRCS} )
    ADD_EXECUTABLE(server ${SERVER_SRCS} )

ENDIF (WIN32)
    TARGET_LINK_LIBRARIES(ubc tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES} ${MYGUI_LIBRARIES} ${OgreOggSound_LIBRARIES})
    TARGET_LINK_LIBRARIES( client tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})
    TARGET_LINK_LIBRARIES( server tinyxml ${Boost_LIBRARIES} ${ENet_LIBRARIES} ${OGRE_LIBRARIES} ${OIS_LIBRARIES})

