ADD_SUBDIRECTORY (include)
IF (WIN32)
set (ENET_SRCS callbacks.c compress.c host.c list.c packet.c peer.c protocol.c win32.c)
set (ENET_INCLUDES include)
INCLUDE_DIRECTORIES( ${ENET_INCLUDES})
add_library (enet ${ENET_SRCS})
ELSE (WIN32)
set (ENET_SRCS callbacks.c compress.c host.c list.c packet.c peer.c protocol.c unix.c)
set (ENET_INCLUDES include)
INCLUDE_DIRECTORIES (${ENET_INCLUDES})
add_library (enet ${ENET_SRCS})
ENDIF (WIN32)
